# SyEProject

./: .dockerignore  .gitignore  CMakeLists.txt  Casilla.cpp  Casilla.h  CasillaEscalera.cpp  CasillaEscalera.h  CasillaNormal.cpp  CasillaNormal.h  CasillaSerpiente.cpp  CasillaSerpiente.h  Dice.cpp  Dice.h  Dockerfile  Game.cpp  Game.h  Player.cpp  Player.h  README.md  Tablero.cpp  Tablero.h
